2003-11-11  Ted Gould <ted@gould.cx>

	* Starting 0.36 development

2003-11-10  Ted Gould <ted@gould.cx>

	* Release 0.35

2003-11-08  Bryce Harrington <brycehar@bryceharrington.com>
	* Updated About dialog
	* Fixed bug on Editing Windows dialog

2003-11-08  Manny the Gnome
	* Remove KDE dialog option

2003-11-06 Bulia Byak
	* Add cursor-key support

2003-10-19  MenTaLguY  <mental@rydia.net>

	* src/xml/repr-io.c (sp_repr_svg_read_node): handle CDATA
	  sections properly

	* Most of the tree.  Unsodipodified pretty much everything I could
  	  find.  New temporary icons, etc etc...

2003-10-23  Ted Gould  <ted@gould.cx>

	* src/*/Makefile.am: Changing the include paths to make distcheck
	get closer to passing.

2003-10-22  Ted Gould  <ted@gould.cx>

	* configure.in: Changing version to 0.32-hydra1.  This is after
	much discussion and serious contemplation (okay, we never really
	got out the magic eight ball).

2003-10-22  Ted Gould  <ted@gould.cx>

	* src/dialogs/desktop-properties.c, src/widgets/spw-utilities.c,
	src/widgets/spw-utilities.h: Cleaning up desktop properties by
	abstracting things into functions.  This patch was written by
	Bryce Harrington and is tracker entry #822497.

2003-10-21  Ted Gould  <ted@gould.cx>

	* src/interface.c: Changing it so there is an Open Recent menu on
	the Sodipodi menu and the toolbar menu.  This removes some clutter
	in the menu.  This is tracker entry #820223 and the author is
	unknown.

2003-10-21  Ted Gould  <ted@gould.cx>

	* src/dialogs/text-edit.c: Make it so that changes can be applied
	to multiple blocks of text.  This patch was submitted by Petr
	Kovar and is tracker #816676.

2003-10-17  Ted Gould  <ted@gould.cx>

	* src/dialogs/object-properties.c: Applying a patch by Lynn Kerby
	which is tracker number 799363.  This makes it so that if just
	the units are changed the object does not get updated.

2003-10-16  Ted Gould  <ted@gould.cx>

	* src/Makefile.am: Adding the modules to the linking of the