@@ -9,6 +9,7 @@ Frank Felfe
 Ted Gould
 Bryce Harrington
 Nathan Hurst
+Thomas Ingham
 Bob Jamison
 Lauris Kaplinski
 Lynn Kerby
